--- a/final-project-fe/Pages/Login.cshtml
+++ b/final-project-fe/Pages/Login.cshtml
@@ -51,7 +51,7 @@
                                         <input type="checkbox" checked /><i class="check-box"></i>Remember Me
                                     </label>
                                 </div>
-                                <a href="#" class="forgot-pwd">Forgot Password?</a>
+                                <a href="~/ForgotPassword" class="forgot-pwd">Forgot Password?</a>
                                 <div class="submit-btns">
                                     <button class="mtr-btn signin" type="submit"><span>Login</span></button>
                                     <button class="mtr-btn signup" type="button" onclick="window.location.href='@Url.Page("/Register")'"><span>Register</span></button>
